joshuto and screencut

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,13 +144,13 @@ bind = $mainMod,  Return, exec, alacritty
 bind = $mainMod ALT,  Return, exec, alacritty --title fly_is_alacritty 
 bind = $mainMod,            q, killactive,
 bind = $mainMod,            M, exit,
-bind = $mainMod,            F, exec, alacritty -e joshuto
+bind = $mainMod,            F, exec, alacritty -e ra
 bind = $mainMod,            P, exec, wofi --show drun
 #bind = $mainMod,            P, pseudo, # dwindle
 #
 bind=$mainMod,L,exec,~/.config/hypr/scripts/lock
 bind = $mainMod,            J, togglesplit, # dwindle
-bind = $mainMod,            Print, exec, /home/yunqi/.config/hypr/scripts/screenshot
+bind = $mainMod,            Print, exec, /home/yunqi/.scripts/screen_cut.py
 bind = $mainMod,            left, movefocus, l
 bind = $mainMod,            right, movefocus, r
 bind = $mainMod,            up, movefocus, u
